netlify deploy added

--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "phonebook-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://chillhaze.github.io/phonebook-app",
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
@@ -36,7 +35,7 @@
     "eject": "react-scripts eject",
     "prepare": "husky install",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "netlify deploy -p"
   },
   "eslintConfig": {
     "extends": [
